<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- API Keys -->
    <string name="google_places_api_key">AIzaSyBm6toDSpcRK21C7o0OZIF7L9ZFzJYpJsA</string>
    <string name="google_maps_api_key">AIzaSyDTKpl91a7nz7xbcTATOINumprrPn3Rieo</string>
    <string name="baidu_map_api_key">9f73afe814fc8582b9e6b20043adee7b</string>

    <!-- main project -->
    <string name="app_name">ARApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_go_map">Watch Map</string>
    <string name="google_map">Google Map</string>
    <string name="baidu_map">Baidu Map</string>
    <string name="action_go_poi">Watch POI</string>

    <!-- Drawer Menuer -->
    <string-array name="drawer_menu_items">
        <item>User Login</item>
        <item>Friends</item>
        <item>Google Map</item>
        <item>Baidu Map</item>
        <item>Search</item>
        <item>Where am I?</item>
        <item>Real Scene</item>
        <item>Map API Compare</item>
        <item>Add My Markers</item>
        <item>3D Markers</item>
        <item>Settings</item>
    </string-array>

    <!-- MainProject -->
    <string name="main_title">LBS ARApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_camera">No camera on this device!</string>
    <string name="no_activity">Activity Not Found Exception!</string>
    <string name="map">Map</string>
    <string name="map_on">Map On</string>
    <string name="map_off">Map Off</string>
    <string name="compass">Compass</string>
    <string name="compass_on">Compass On</string>
    <string name="compass_off">Compass Off</string>
    <string name="goto_map">Watch Map</string>
    <string name="goto_poi">Watch POI</string>

    <!-- Compass -->
    <string name="cardinal_north">N</string>
    <string name="cardinal_east">E</string>
    <string name="cardinal_south">S</string>
    <string name="cardinal_west">W</string>
    <!-- Location -->
    <string name="latitudeLabel">Latitude:</string>
    <string name="longitudeLabel">Longitude:</string>
    <string name="providerLabel">Provider:</string>
    <string name="accuracyLabel">Accuracy:</string>
    <string name="timeToFixLabel">Time to Fix:</string>
    <string name="secondsUnit">second(s)</string>
    <string name="metersUnit">meters(s)</string>
    <string name="allProvidersLabel">All Location Providers:</string>
    <string name="enabledProvidersLabel">Enabled Providers:</string>
    <string name="changeLocationProviderSettingsText">Change Location Provider Settings</string>
    <string name="provider_prompt">Select Location Provider</string>

    <!-- Location Providers -->
    <string-array name="location_providers">
        <item>GPS</item>
        <item>Network</item>
        <item>Passive</item>
        <item>Auto</item>
    </string-array>

    <!-- Dialogs -->
    <string name="dialog_title_setting_location">"Want Provider Settings?"</string>
    <string name="dialog_set_location_src">"Do you want to set the Location Providers?"</string>
    <string name="dialog_provider_not_enabled">"Location Provider: “"%s"” is not enabled.\n"</string>
    <string name="alert_confirm">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>

    <!-- Login -->
    <string name="login_title">Log In Or Join</string>
    <string name="login">Log In</string>
    <string name="join">Join</string>
    <string name="username">User Name:</string>
    <string name="username_hint">Input your user name</string>
    <string name="password">Password:</string>
    <string name="password_hint">Input your password</string>

    <!-- Google Map -->
    <string name="googlemap_title">Google Map</string>
    <string name="googlemap_bottom_tab">Google</string>

    <!-- Baidu Map -->
    <string name="baidumap_title">Baidu Map</string>
    <string name="baidumap_bottom_tab">Baidu</string>

    <!-- AutoNavi Map -->
    <string name="autonavimap_title">AutoNavi</string>
    <string name="autonavimap_bottom_tab">AutoNavi</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="btn_map">Log In</string>
    <string name="btn_search">Join</string>
    <string name="btn_list">User Name:</string>
    <string name="btn_realscene">Input your user name</string>

    <!-- Search UI -->
    <string name="searchui_title">Search Information</string>
    <string name="search">Search</string>
    <string name="at">Search in:</string>
    <string name="city">City:</string>
    <string name="search_region">Select Search Region:</string>
    <string name="search_in_city">Search in City</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="default_city">北京</string>
    <string name="looking_for">Looking For: </string>
    <string name="default_hint">Input the keywords you want to search</string>
    <string name="default_keyword">餐厅</string>
    <string name="clear_before">Clear Before Search</string>
    <string name="your_current_location">Your current location is: </string>
    <string name="search_radius">Search Radius</string>
    <!-- search navi -->
    <string name="search_navi">Search Navigation</string>
    <!-- Search bottom menu -->
    <string name="search_menu_ui">Search</string>
    <string name="search_menu_list">Result List</string>
    <string name="search_menu_map">Map</string>
    <string name="search_menu_realscene">Real Scene</string>

    <!-- Search Result -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!-- Custom Markers -->
    <string name="custom_marker_title">User Custom Markers</string>
    <string name="goto_my">Focus my Place</string>
    <string name="add_marker">Add Marker Here</string>
    <string name="new_marker">New Marker</string>
    <string name="save_marker">Save Marker</string>
    <string name="load_markers">Load Markers</string>
    <string name="save_success">Save Marker Successfully!</string>
    <string name="save_failed">Save Marker Failed!</string>

    <!-- Save Marker Dialog -->

    <string name="dialog_title_save_marker">Save New Marker</string>
    <string name="dialog_save_marker_name">Marker name: </string>
    <string name="dialog_save_marker_des">Marker description: </string>
    <string name="dialog_too_long">"String is too long!</string>

    <!-- Custom Marker Bottom menu -->
    <string name="custom_menu_list">List</string>
    <string name="custom_menu_map">Map</string>
    <string name="custom_menu_realscene">Real Scene</string>
    <!-- Custom Marker List -->
    <string name="btn_refresh">Refresh Data</string>
    <string name="btn_delete">Delete</string>

    <!-- Keywords -->
    <string-array name="keywords_categories">
        <item>餐厅</item>
        <item>交通</item>
        <item>购物</item>
        <item>生活</item>
        <item>娱乐</item>
    </string-array>
    <string-array name="restaurant">
        <item>川菜</item>
        <item>快餐</item>
        <item>火锅</item>
        <item>麦当劳</item>
        <item>肯德基</item>
        <item>海底捞</item>
    </string-array>
    <string-array name="traffic">
        <item>地铁站</item>
        <item>公交站</item>
        <item>火车站</item>
        <item>加油站</item>
        <item>火车票售票处</item>
        <item>机场</item>
    </string-array>
    <string-array name="shopping">
        <item>超市</item>
        <item>书店</item>
        <item>购物中心</item>
        <item>菜市场</item>
    </string-array>
    <string-array name="life">
        <item>银行</item>
        <item>酒店</item>
        <item>ATM</item>
        <item>医院</item>
        <item>药店</item>
    </string-array>
    <string-array name="entertainment">
        <item>电影院</item>
        <item>KTV</item>
        <item>体育馆</item>
        <item>操场</item>
        <item>活动中心</item>
        <item>桌游</item>
    </string-array>

    <!-- test activities -->
    <string name="test_realscene">Test RealScene</string>
    <string name="test_compass">Test Compass</string>
    <string name="test_markers">Test Markers</string>
    <string name="test_login">Test Login</string>
    <string name="test_login_sso">Test Login SSO</string>
    <string name="test_autonavi_map">Test AutoNavi Map</string>
    <string name="compare_map">Map Compare</string>
    <string name="test_visible">Test Visible</string>
    <string name="test_camera">Test Camera</string>
    <!-- 欢迎界面 -->
    <string name="welcome_maintitle">City Explorer</string>
    <string name="welcome_subtitle">An Special AR(Augmented Reality) + LBS(Location-Based Service) App</string>
    <string name="welcome_author">Dandan Meng. @2013</string>
    <string name="welcome_email">mengdandanno1@163.com</string>
    <string name="welcome_blog">http://www.cnblogs.com/mengdd/</string>
    <string name="welcome_time">“@2013”</string>

</resources>