<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:minHeight="@dimen/bottom_menu_height"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/search_menu_ui"
        style="@style/BottomMenuButton"
        android:layout_weight="1"
        android:drawableTop="@drawable/bottom_menu_ic_search"
        android:text="@string/search_menu_ui" />

    <Button
        android:id="@+id/search_menu_list"
        style="@style/BottomMenuButton"
        android:layout_weight="1"
        android:drawableTop="@drawable/bottom_menu_ic_list"
        android:text="@string/search_menu_list" />

    <Button
        android:id="@+id/search_menu_map"
        style="@style/BottomMenuButton"
        android:layout_weight="1"
        android:drawableTop="@drawable/bottom_menu_ic_map"
        android:text="@string/search_menu_map" />

    <Button
        android:id="@+id/search_menu_real"
        style="@style/BottomMenuButton"
        android:layout_weight="1"
        android:drawableTop="@drawable/bottom_menu_ic_camera"
        android:text="@string/search_menu_realscene" />

</LinearLayout>