<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/goto_my"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_btn_on_map"
        android:padding="5dp"
        android:text="@string/goto_my"
        android:textColor="@color/btn_map_text"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/new_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_btn_on_map"
        android:padding="5dp"
        android:text="@string/new_marker"
        android:textColor="@color/btn_map_text"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/new_marker"
        android:background="@drawable/selector_btn_on_map"
        android:padding="5dp"
        android:text="@string/save_marker"
        android:textColor="@color/btn_map_text"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/load_all_markers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/selector_btn_on_map"
        android:padding="5dp"
        android:text="@string/load_markers"
        android:textColor="@color/btn_map_text"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold" />

</RelativeLayout>