<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/search_menu_ui"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_button_bg"
            android:ellipsize="marquee"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/search_menu_ui"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/search_menu_list"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_button_bg"
            android:ellipsize="marquee"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/search_menu_list"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/search_menu_map"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_button_bg"
            android:ellipsize="marquee"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/search_menu_map"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/search_menu_real"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_button_bg"
            android:ellipsize="marquee"
            android:padding="2dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/search_menu_realscene"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</HorizontalScrollView>